--- a/inst/rmarkdown/templates/quotes/skeleton/skeleton.html
+++ b/inst/rmarkdown/templates/quotes/skeleton/skeleton.html
@@ -59,7 +59,9 @@
 <div class="ndoc">
 <p>Devis n° N0001</p>
 </div>
-<div class = "header">
+<div class = "wrapper">
+
+<div class = "doc-header">
 
 <div class = "freelance">
 <div class = "logo">
@@ -201,47 +203,19 @@ test
 </tr>
 </tbody>
 </table>
-<table>
-<thead>
-<tr>
-<th style="text-align:left;">
-Client
-</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left;">
-firstname name
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-1 rue fictive
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-test
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-01000 Testcity
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-+33(0)6 00 00 00 00
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<a href="mailto:contact@email.com" class="email">contact@email.com</a>
-</td>
-</tr>
-</tbody>
-</table>
+</div>
+</div>
+</div>
+<div class="doc-main">
+
+</div>
+<div class="doc-footer">
+<div class="footquote">
+<p>Afin de valider ce devis, merci de le signer et le renvoyer à :</p>
+<div class="footbox">
+<p>Bon pour accord le :</p>
+<p>Signature :</p>
+</div>
 </div>
 </div>
 </div>
