--- a/inst/rmarkdown/templates/invoices/skeleton/custom_invoices.css
+++ b/inst/rmarkdown/templates/invoices/skeleton/custom_invoices.css
@@ -80,7 +80,7 @@ body {
   border-radius: 15px;
   display: inline-block;
   width: 30mm;
-  height: 17mm;
+  height: 19mm;
   margin: 0;
   margin-top: 10mm;
   padding: 0;
@@ -168,6 +168,7 @@ body {
   color: rgb(230,230,230);
   border-left: 2px solid rgb(23,37,45);
   border-right: 2px solid rgb(23,37,45);
+  text-align: center;
 }
 
 .doc-main th {
@@ -185,7 +186,7 @@ body {
 }
 
 .doc-main tfoot {
-  background: white;
+  background: none;
   font-size: 9pt;
   text-align: right;
 }
@@ -193,6 +194,13 @@ body {
 .comments {
   grid-column: col1-start / col5-end;
   grid-row: row1-start / row1-end;
+  line-height: 1em;
+}
+
+.comments > p:first-child:before {
+  content: "Commentaire :";
+  display: block;
+  font-weight: bold;
 }
 
 .description {
