--- a/inst/rmarkdown/templates/quotes/skeleton/custom_quotes.css
+++ b/inst/rmarkdown/templates/quotes/skeleton/custom_quotes.css
@@ -13,6 +13,7 @@ body {
 .newpage {
   page-break-before: always;
   text-align: justify;
+  text-align-last: left;
 }
 
 /*########################*/
@@ -334,4 +335,10 @@ td {
   margin: 0;
   padding: 0;
   background: none;
+}
+
+
+
+.break-before-me {
+  break-before: page;
 }
